src/common.scss
/**
 * #.# Common SCSS
 *
 * Can include things like variables and mixins
 * that are used across the project.
*/

// Colors.
$black: rgb(41, 41, 41);
$white: #f4f4f4;
$gray: #aaa;
$off-white: #f1f1f1;
$white-transparent: rgba(255, 255, 255, 0.9);

// Keep in sync with fdd-theme\skin\assets\styles\components\typography\_typography.scss
$base-fdd-text-color:    rgba(38,38,38,0.6);

$fdd-wide-width-pixels: 980px;
$fdd-outer-padding-wide-screen: 2%;
$fdd-outer-padding-small-screen: 5%;

.fdd-bottom-filling {
  height: 10vh; // It's quite possible we don't need any height thanks the clear:both trick
  clear: both;
}

.block-editor span.oob {
  font-style: italic;
  color: #aaa;
}

@mixin title__float_right {
  text-align: center;
  display: block;
  line-height: 1em;
  width: 50%;
  float: right;
  padding-right: $fdd-outer-padding-wide-screen;
}

@mixin title__centered {
  width: 100%;
  text-align: center;
  padding: 0 1em;
}

